--- a/src/styles/breadcrumb-nav.css
+++ b/src/styles/breadcrumb-nav.css
@@ -35,6 +35,10 @@ li {
   vertical-align: middle;
   width: 20%; }
 
+.pop-over-item {
+  padding: 0.25rem 1rem;
+  display: block; }
+
 .crumb-link {
   font-size: 0.8rem;
   font-weight: 100;
@@ -44,19 +48,6 @@ li {
   white-space: nowrap;
   color: dimgrey !important;
   background: #f5f5f5; }
-
-.crumb-link::after {
-  background: transparent;
-  border-radius: 0 0 0 0;
-  box-shadow: 1.5px -1.5px 0px 0px #d2d2d2;
-  content: "";
-  height: 50px;
-  position: absolute;
-  right: -21px;
-  top: -4px;
-  transform: scale(0.7) rotate(19deg) skewY(52deg);
-  width: 48px;
-  z-index: 1; }
 
 a:link,
 a:visited,
