--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -7,3 +7,13 @@
     display: none !important; }
   .bottom-nav div {
     border-right: 1px solid lightgray; }
+  .bottom-nav p {
+    margin-top: inherit;
+    font-size: 0.8rem;
+    font-weight: 100;
+    display: block;
+    padding: 18px 0;
+    position: relative;
+    white-space: nowrap;
+    color: dimgrey !important;
+    background: #f5f5f5; }
