--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -5,6 +5,17 @@
     div {
         border-right: 1px solid lightgray;
     }
+    p {
+        margin-top: inherit;
+        font-size: 0.8rem;
+        font-weight: 100;
+        display: block;
+        padding: 18px 0;
+        position: relative;
+        white-space: nowrap;
+        color: dimgrey !important;
+        background: #f5f5f5;
+    }
     z-index: 1;
     position: fixed !important;
     bottom: 0 !important;
